# pkg/services/say1/say1_endpoint_gen.go
@@ -1,0 +1,69 @@
+package say1
+
+// Code generated by gowrap. DO NOT EDIT.
+// template:
+// gowrap: http://github.com/fitan/gowrap
+
+import (
+	"context"
+
+	"go.opentelemetry.io/otel/trace"
+
+	endpoint "github.com/go-kit/kit/endpoint"
+)
+
+type Mws map[string][]endpoint.Middleware
+
+type Endpoints struct {
+	SayPodEndpoint endpoint.Endpoint
+}
+
+func AddEndpointMiddlewareToAllMethods(mw map[string][]endpoint.Middleware, m endpoint.Middleware) {
+	methods := []string{
+
+		"SayPod",
+	}
+	for _, v := range methods {
+		mw[v] = append(mw[v], m)
+	}
+}
+
+func AddEndpointMiddlewareToAllMethodsWithMethodName(mw map[string][]endpoint.Middleware, m func(n string) endpoint.Middleware) {
+	methods := []string{
+
+		"SayPod",
+	}
+	for _, v := range methods {
+		mw[v] = append(mw[v], m(v))
+	}
+}
+
+// New returns a Endpoints struct that wraps the provided service, and wires in all of the
+// expected endpoint middlewares
+func NewEndpoints(s Say1Service, mdw Mws) Endpoints {
+	eps := Endpoints{
+
+		SayPodEndpoint: MakeSayPodEndpoint(s),
+	}
+
+	for _, m := range mdw["SayPod"] {
+		eps.SayPodEndpoint = m(eps.SayPodEndpoint)
+	}
+
+	return eps
+}
+
+func MakeSayPodEndpoint(s Say1Service) endpoint.Endpoint {
+	return func(ctx context.Context, request interface{}) (interface{}, error) {
+		req := request.(SayPodReq)
+		rs, err := s.SayPod(ctx, req)
+		result := make(map[string]interface{}, 0)
+		if err != nil {
+			result["err"] = err.Error()
+			return result, nil
+		}
+		result["data"] = rs
+		result["traceId"] = trace.SpanFromContext(ctx).SpanContext().TraceID().String()
+		return result, nil
+	}
+}
